--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
         TurkishFilterProxy.hpp TurkishFilterProxy.cpp
+
+        AboutDialog.hpp AboutDialog.cpp AboutDialog.ui
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET YKSEpiSelecta APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
