--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         TurkishFilterProxy.hpp TurkishFilterProxy.cpp
 
         AboutDialog.hpp AboutDialog.cpp AboutDialog.ui
+        Resources.qrc
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET YKSEpiSelecta APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
