--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(YKSEpiSelecta VERSION 0.1 LANGUAGES CXX)
+project(AcademyScope VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -19,10 +19,11 @@ set(PROJECT_SOURCES
         MainWindow.ui
         BackEnd.cpp
         BackEnd.hpp
+        Resources.qrc
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(YKSEpiSelecta
+    qt_add_executable(AcademyScope
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
         TurkishFilterProxy.hpp TurkishFilterProxy.cpp
@@ -31,32 +32,32 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         Resources.qrc
     )
 # Define target properties for Android with Qt 6 as:
-#    set_property(TARGET YKSEpiSelecta APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#    set_property(TARGET AcademyScope APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
 #                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
-        add_library(YKSEpiSelecta SHARED
+        add_library(AcademyScope SHARED
             ${PROJECT_SOURCES}
         )
 # Define properties for Android with Qt 5 after find_package() calls as:
 #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(YKSEpiSelecta
+        add_executable(AcademyScope
             ${PROJECT_SOURCES}
         )
     endif()
 endif()
 
-target_link_libraries(YKSEpiSelecta PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Sql)
+target_link_libraries(AcademyScope PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Sql)
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
 # explicit, fixed bundle identifier manually though.
 if(${QT_VERSION} VERSION_LESS 6.1.0)
-  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.YKSEpiSelecta)
+  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.volkanorhan.academyscope)
 endif()
-set_target_properties(YKSEpiSelecta PROPERTIES
+set_target_properties(AcademyScope PROPERTIES
     ${BUNDLE_ID_OPTION}
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -65,12 +66,12 @@ set_target_properties(YKSEpiSelecta PROPERTIES
 )
 
 include(GNUInstallDirs)
-install(TARGETS YKSEpiSelecta
+install(TARGETS AcademyScope
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(YKSEpiSelecta)
+    qt_finalize_executable(AcademyScope)
 endif()
