Improves Turkish character handling in search
Introduces `StringUtil` to handle Turkish-specific casing.

Replaces direct string manipulation in search queries with
`StringUtil` methods to ensure correct casing for Turkish
characters, improving search accuracy.

Refactors `SQLiteUtil` to a header-only library, and moves the header
file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,16 +23,15 @@ find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Sql)
 
 set(PROJECT_SOURCES
         main.cpp
-        MainWindow.cpp
-        MainWindow.hpp
-        MainWindow.ui
+        Resources.qrc
+        MainWindow.cpp MainWindow.hpp MainWindow.ui
+        AboutDialog.hpp AboutDialog.cpp AboutDialog.ui
         EnumDefinitions.hpp
         BackEnd.cpp
         BackEnd.hpp
         SQLiteUtil.hpp SQLiteUtil.cpp
+        StringUtil.hpp StringUtil.cpp
         TurkishFilterProxy.hpp TurkishFilterProxy.cpp
-        AboutDialog.hpp AboutDialog.cpp AboutDialog.ui
-        Resources.qrc
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
