Refactors project structure and resource handling
Moves source files into a dedicated "Src" directory to improve code organization.

Updates CMakeLists.txt to reflect the new directory structure and resource locations.

Consolidates resource management by moving resources to a "Resources" directory.

Removes obsolete files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,14 +21,28 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Sql)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Sql)
 
+include_directories(src)
+include_directories(src/Util)
+include_directories(Components/BackEnd/src)
+
 file(GLOB ProjectSrc
-    "./*.cpp"
-    "./*.hpp"
-    "./*.ui"
-    "./*.qrc"
-    "./Utils/*.cpp"
-    "./Utils/*.hpp"
+    "./Src/*.cpp"
+    "./Src/*.hpp"
+    "./UI/*.ui"
+    "./Resources/*.qrc"
+    "./Src/Utils/*.cpp"
+    "./Src/Utils/*.hpp"
+    "./Components/BackEnd/Src/*.cpp"
+    "./Components/BackEnd/Src/*.hpp"
+    "./Components/BackEnd/Src/Utils/*.cpp"
+    "./Components/BackEnd/Src/Utils/*.hpp"
 )
+
+set(CMAKE_AUTOUIC_SEARCH_PATHS
+    "Src"
+    "UI"
+)
+
 
 ####################
 # App Icon Definitions
